--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "basic-solc-project/lib/forge-std"]
 	path = basic-solc-project/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "basic-solc-project/lib/openzeppelin-contracts"]
+	path = basic-solc-project/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
