--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "basic-solc-project/lib/openzeppelin-contracts"]
 	path = basic-solc-project/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "tincho-challenge/lib/forge-std"]
+	path = tincho-challenge/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
