--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tincho-challenge/lib/forge-std"]
 	path = tincho-challenge/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "2024-03-23-ether-smartcontracts/lib/forge-std"]
+	path = 2024-03-23-ether-smartcontracts/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
