--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "2024-03-23-ether-smartcontracts/lib/forge-std"]
 	path = 2024-03-23-ether-smartcontracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "2024-03-23-ether-smartcontracts/lib/openzeppelin-contracts"]
+	path = 2024-03-23-ether-smartcontracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
